[project]
name = "i3-swap-focus"
version = "0.4.4"
description = "i3/sway script to toggle between last windows"
authors = [
    {name = "Olivier Le Moal", email = "mail@olivierlemoal.fr"},
]
dependencies = [
    "setuptools",
    "i3ipc",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}


[project.urls]
Homepage = "https://github.com/olivierlemoal/i3-swap-focus"

[project.scripts]
i3-swap-focus = "i3_swap_focus:main"
